@@ -21,7 +21,7 @@ setup(name='collective.navigationtoggle',
       keywords='plone jquery navigation javascript',
       author='RedTurtle Technology',
       author_email='sviluppoplone@redturtle.net',
-      url='http://svn.plone.org/svn/collective/collective.navigationtoggle',
+      url='http://plone.org/products/collective.navigationtoggle',
       license='GPL',
       packages=find_packages(exclude=['ez_setup']),
       namespace_packages=['collective'],
