@@ -8,9 +8,10 @@ Changelog
 * when querying empty folder, do not prevent browser default action [keul]
 * prevent browser cache (mainly know Internet Explorer problem) [keul]
 * dot not display always the content image icon (sometimes users don't see them in navigation) [keul]
-* now every element node cache its subtree so AJAX call is performed only once [keul]
+* now elements node cache its subtree, so AJAX call is performed only once [keul]
 * added dependency on simplejson for formatting server responses [keul]
 * added minimal Plone 4.0 compatibility (UI result is not perfect) [keul]
+* added a simple slide up/down effect (disabled by default) [keul]
 
 0.1.0 (2010-04-06)
 ------------------
